--- a/CryptoNoteWallet/App.config
+++ b/CryptoNoteWallet/App.config
@@ -1,18 +1,31 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
     <!-- Leave WalletPath empty to look in the directory the CryptoNoteWallet resides. -->
-    <add key="WalletPath" value=""/>
-    <add key="DaemonFileName" value="bitmonerod.exe"/>
-    <add key="WalletClientFileName" value="simplewallet.exe"/>
-    <add key="MinerFileName" value="simpleminer.exe"/>
-    <add key="WalletExtensions" value="wallet;bin"/>
-    <add key="MiningPoolAddresses" value="monerominers.com:5555;moneropool.org:5555;moneropool.com:3333;monero.crypto-pool.fr:3333;extremepool.org:3333"/>
-    <add key="WalletRefreshInterval" value="10000"/>
-    <add key="DaemonPingInterval" value="1000"/>
-    <add key="DaemonConnectionCountInterval" value="5000"/>
+    <add key="WalletPath" value="" />
+    <add key="DaemonFileName" value="bitmonerod.exe" />
+    <add key="WalletClientFileName" value="simplewallet.exe" />
+    <add key="MinerFileName" value="simpleminer.exe" />
+    <add key="WalletExtensions" value="wallet;bin" />
+    <add key="MiningPoolAddresses" value="monerominers.com:5555;moneropool.org:5555;moneropool.com:3333;monero.crypto-pool.fr:3333;extremepool.org:3333" />
+    <add key="WalletRefreshInterval" value="10000" />
+    <add key="DaemonPingInterval" value="1000" />
+    <add key="DaemonConnectionCountInterval" value="5000" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
-  <startup> 
+  <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
+  <system.web>
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+      </providers>
+    </roleManager>
+  </system.web>
 </configuration>
