--- a/CryptoNoteWallet/CryptoNoteWallet.csproj
+++ b/CryptoNoteWallet/CryptoNoteWallet.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Deployment" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Printing" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
